--- a/src/app/shared/components/forms/form-body-application/form-body-application.component.html
+++ b/src/app/shared/components/forms/form-body-application/form-body-application.component.html
@@ -1,3 +1,4 @@
+<!-- TODO: Validate all validators! Make sure they make sense -->
 <form (ngSubmit)="onSubmit()" #applicationForm="ngForm" class="os2-form p-3 mt-4">
   <div *ngIf="errorMessages" class="error-messages p-3">
     <ul class="mb-0">
@@ -6,22 +7,137 @@
       </li>
     </ul>
   </div>
-  <div class="row">
+  <div class="row" *ngIf="metadata">
     <div class="form-group mt-3">
-      <label class="form-label" for="name">{{'QUESTION.GIVE-APPLICATION-NAME' | translate}}</label>*
+      <label class="form-label" for="name">{{'GEN.NAME' | translate}}*</label>
 
       <input type="text" class="form-control" id="name" name="name"
-        [placeholder]="'QUESTION.APPLICATION-NAME-PLACEHOLDER' | translate" maxlength="50" required
+        [placeholder]="'QUESTION.APPLICATION.NAME-PLACEHOLDER' | translate" maxlength="50" required
         [(ngModel)]="application.name"
         [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('name'), 'is-valid' : formFailedSubmit && !errorFields.includes('name')}">
     </div>
 
     <div class="form-group mt-3">
-      <label class="form-label" for="description">{{'QUESTION.GIVE-APPLICATION-DESCRIPTION' | translate}}</label>
+      <label class="form-label" for="description">{{'GEN.DESCRIPTION' | translate}}</label>
       <textarea id="description" name="description"
-        [placeholder]="'QUESTION.APPLICATION-DESCRIPTION-PLACEHOLDER' | translate" [maxLength]="1024" [rows]="6"
+        [placeholder]="'QUESTION.APPLICATION.DESCRIPTION-PLACEHOLDER' | translate" [maxLength]="1024" [rows]="6"
         class="form-control" [(ngModel)]="application.description"
         [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('description'), 'is-valid' : formFailedSubmit && !errorFields.includes('description')}"></textarea>
+    </div>
+
+    <div class="form-group mt-3">
+      <label class="form-label" for="metadata.status">{{'APPLICATION.METADATA-FIELD.STATUS' | translate}}</label>
+      <mat-select class="form-control" name="metadata.statusOptions" [(ngModel)]="metadata.status"
+        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('metadata.status'), 'is-valid' : formFailedSubmit && !errorFields.includes('metadata.status')}">
+        <mat-option *ngFor="let statusOption of statuses" [value]="statusOption.value">
+          {{statusOption.label}}
+        </mat-option>
+      </mat-select>
+    </div>
+
+    <!-- TODO: Fix styling -->
+    <div class="form-group mt-3">
+      <label class="form-label" for="metadata.startDate">{{'APPLICATION.METADATA-FIELD.START-DATE' | translate}}</label>
+      <mat-form-field appearance="fill">
+        <mat-label>{{'QUESTION.APPLICATION.START-DATE-PLACEHOLDER' | translate}}</mat-label>
+        <input matInput [min]="today" [max]="serializedEndDate.value" [matDatepicker]="startDatePicker"
+          [formControl]="serializedStartDate">
+        <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
+        <mat-datepicker panelClass="datepicker-table-fix" #startDatePicker></mat-datepicker>
+      </mat-form-field>
+    </div>
+
+    <div class="form-group mt-3">
+      <label class="form-label" for="metadata.endDate">{{'APPLICATION.METADATA-FIELD.END-DATE' | translate}}</label>
+      <mat-form-field appearance="fill" [ngClass]="'datepicker-table-fix'">
+        <mat-label>{{'QUESTION.APPLICATION.END-DATE-PLACEHOLDER' | translate}}</mat-label>
+        <input matInput [min]="serializedStartDate.value" [matDatepicker]="endDatePicker"
+          [formControl]="serializedEndDate">
+        <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
+        <mat-datepicker panelClass="datepicker-table-fix" #endDatePicker></mat-datepicker>
+      </mat-form-field>
+    </div>
+
+    <div class="form-group mt-3">
+      <label class="form-label" for="metadata.category">{{'APPLICATION.METADATA-FIELD.CATEGORY' | translate}}</label>
+      <input type="text" class="form-control" id="category" name="category"
+        [placeholder]="'QUESTION.APPLICATION.CATEGORY-PLACEHOLDER' | translate" maxlength="50" required
+        [(ngModel)]="metadata.category"
+        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('metadata.category'), 'is-valid' : formFailedSubmit && !errorFields.includes('metadata.category')}">
+    </div>
+
+    <div class="form-group mt-3">
+      <label class="form-label" for="metadata.owner">{{'APPLICATION.METADATA-FIELD.OWNER' | translate}}</label>
+      <input type="text" class="form-control" id="owner" name="owner"
+        [placeholder]="'QUESTION.APPLICATION.OWNER-PLACEHOLDER' | translate" maxlength="50" required
+        [(ngModel)]="metadata.owner"
+        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('metadata.owner'), 'is-valid' : formFailedSubmit && !errorFields.includes('metadata.owner')}">
+    </div>
+
+    <div class="form-group mt-3">
+      <label class="form-label" for="metadata.contactPerson">{{'APPLICATION.METADATA-FIELD.CONTACT-PERSON' |
+        translate}}</label>
+      <input type="text" class="form-control" id="contactPerson" name="contactPerson"
+        [placeholder]="'QUESTION.APPLICATION.CONTACT-PERSON-PLACEHOLDER' | translate" maxlength="50" required
+        [(ngModel)]="metadata.contactPerson"
+        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('metadata.contactPerson'), 'is-valid' : formFailedSubmit && !errorFields.includes('metadata.contactPerson')}">
+    </div>
+
+    <!-- TODO: Validate email. God, not this shit... -->
+    <div class="form-group mt-3">
+      <label class="form-label" for="metadata.contactEmail">{{'APPLICATION.METADATA-FIELD.CONTACT-EMAIL' | translate}}</label>
+      <input type="text" class="form-control" id="contactEmail" name="contactEmail"
+        [placeholder]="'QUESTION.APPLICATION.CONTACT-EMAIL-PLACEHOLDER' | translate" maxlength="50" required
+        [(ngModel)]="metadata.contactEmail"
+        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('metadata.contactEmail'), 'is-valid' : formFailedSubmit && !errorFields.includes('metadata.contactEmail')}">
+    </div>
+
+    <!-- TODO: Validate phone. -->
+    <div class="form-group mt-3">
+      <label class="form-label" for="metadata.contactPhone">{{'APPLICATION.METADATA-FIELD.CONTACT-PHONE' | translate}}</label>
+      <input type="text" class="form-control" id="contactPhone" name="contactPhone"
+        [placeholder]="'QUESTION.APPLICATION.CONTACT-PHONE-PLACEHOLDER' | translate" maxlength="50" required
+        [(ngModel)]="metadata.contactPhone"
+        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('metadata.contactPhone'), 'is-valid' : formFailedSubmit && !errorFields.includes('metadata.contactPhone')}">
+    </div>
+
+    <div class="form-group mt-3">
+      <mat-checkbox id="metadata.personalData" name="metadata.personalData"
+        [(ngModel)]="metadata.personalData">
+        <mat-label for="metadata.personalData" class="form-check-label text--bold margin-top-25px"
+          style="white-space: initial">{{'QUESTION.APPLICATION.PERSONAL-DATA-PLACEHOLDER' | translate}}</mat-label>
+      </mat-checkbox>
+    </div>
+
+    <div class="form-group mt-3">
+      <label class="form-label" for="metadata.hardware">{{'APPLICATION.METADATA-FIELD.HARDWARE' | translate}}</label>
+      <textarea id="metadata.hardware" name="metadata.hardware"
+        [placeholder]="'QUESTION.APPLICATION.HARDWARE-PLACEHOLDER' | translate" [maxLength]="1024" [rows]="6"
+        class="form-control" [(ngModel)]="metadata.hardware"
+        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('metadata.hardware'), 'is-valid' : formFailedSubmit && !errorFields.includes('metadata.hardware')}"></textarea>
+    </div>
+
+    <div class="form-group mt-3">
+      <label class="form-label" for="metadata.controlledProperty">{{'APPLICATION.METADATA-FIELD.CONTROLLED-PROPERTY' |
+        translate}}</label>
+      <mat-select class="form-control" name="metadata.controlledProperty" multiple="true"
+        [(ngModel)]="metadata.controlledProperty"
+        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('metadata.controlledProperty'), 'is-valid' : formFailedSubmit && !errorFields.includes('metadata.controlledProperty')}">
+        <mat-option *ngFor="let ctrlProperty of controlledProperties" [value]="ctrlProperty">
+          {{ctrlProperty}}
+        </mat-option>
+      </mat-select>
+    </div>
+
+    <div class="form-group mt-3">
+      <label class="form-label" for="metadata.deviceType">{{'APPLICATION.METADATA-FIELD.DEVICE-TYPE' | translate}}</label>
+      <mat-select class="form-control" name="metadata.deviceType" multiple="true"
+        [(ngModel)]="metadata.deviceType"
+        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('metadata.deviceType'), 'is-valid' : formFailedSubmit && !errorFields.includes('metadata.deviceType')}">
+        <mat-option *ngFor="let deviceType of deviceTypes" [value]="deviceType.value">
+          {{deviceType.label}}
+        </mat-option>
+      </mat-select>
     </div>
   </div>
 
