--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,7 @@
 //Components
 @import 'assets/scss/components/boxes';
 @import 'assets/scss/components/bulk-import';
+@import 'assets/scss/components/date-picker';
 @import 'assets/scss/components/forms';
 @import 'assets/scss/components/list';
 @import 'assets/scss/components/loading-spinner';
