Default sort behaviour on application list page set to name ascending

--- a/src/app/applications/applications-list/applications-table/applications-table.component.html
+++ b/src/app/applications/applications-list/applications-table/applications-table.component.html
@@ -7,8 +7,8 @@
       {{errorMessage | translate}}
     </div>
 
-    <table mat-table [dataSource]="data" class="example-table" matSort matSortActive="created" matSortDisableClear
-      matSortDirection="desc">
+    <table mat-table [dataSource]="data" class="example-table" matSort matSortActive="name" matSortDisableClear
+      matSortDirection="asc">
 
       <!-- Name Column -->
       <ng-container matColumnDef="name">
