--- a/src/app/applications/application-detail/application-detail.component.html
+++ b/src/app/applications/application-detail/application-detail.component.html
@@ -14,7 +14,18 @@
           <p *ngIf="application.description">
             <strong>{{ 'APPLICATION.DESCRIPTION' | translate }}</strong></p>
           <pre><p>{{application.description}}</p></pre>
-          <app-metadata-details [metadataJson]="application.metadata"></app-metadata-details>
+          <app-metadata-details [status]="application.status" [startDate]="application.startDate"
+          [endDate]="application.endDate"
+          [category]="application.category"
+          [owner]="application.owner"
+          [contactPerson]="application.contactPerson"
+          [contactEmail]="application.contactEmail"
+          [contactPhone]="application.contactPhone"
+          [personalData]="application.personalData"
+          [hardware]="application.hardware"
+          [controlledProperties]="application.controlledProperties"
+          [deviceTypes]="application.deviceTypes"
+          ></app-metadata-details>
         </div>
       </div>
     </div>
