--- a/src/app/shared/components/forms/form-key-value/form-key-value-list/form-key-value-list.component.html
+++ b/src/app/shared/components/forms/form-key-value/form-key-value-list/form-key-value-list.component.html
@@ -1,4 +1,12 @@
-<button (click)="addNewTag()" class="btn btn-secondary mb-2" type="button">{{ "FORM.ADD-METADATA-ROW" | translate }}</button>
-<ng-container *ngFor="let pair of tags; let i = index">
-  <app-form-key-value-pair [id]="i" [pair]="pair" (deletePair)="deleteTag($event)" ></app-form-key-value-pair>
-</ng-container>
+<button (click)="addNewTag()" class="btn btn-secondary mb-3" type="button">{{ "FORM.ADD-METADATA-ROW" | translate
+  }}</button>
+
+<table class="table table-striped table-bordered">
+  <tbody>
+    <ng-container *ngFor="let pair of tags; let i = index">
+      <!-- Global table styling breaks if <tr> isn't a direct child of <tbody> -->
+      <tr app-form-key-value-pair [id]="i" [pair]="pair" [errorFieldId]="errorFieldId" (deletePair)="deleteTag($event)">
+      </tr>
+    </ng-container>
+  </tbody>
+</table>
