--- a/src/app/shared/components/forms/form-key-value/form-key-value-pair/form-key-value-pair.component.html
+++ b/src/app/shared/components/forms/form-key-value/form-key-value-pair/form-key-value-pair.component.html
@@ -1,12 +1,21 @@
-<div class="col">
-  <input type="text" id="keyValuePairKey" name="keyValuePairKey" maxLength="32" [placeholder]="'GEN.KEY' | translate"
-    class="form-control" [(ngModel)]="pair.key">
-</div>
-<div class="col">
-  <input type="text" id="keyValuePairValue" name="keyValuePairValue" maxLength="32"
-    [placeholder]="'GEN.VALUE' | translate" class="form-control" [(ngModel)]="pair.value">
-</div>
-<!-- TODO: Style delete button after mock up -->
-<div class="col-1">
-  <button (click)="this.deletePair.emit(id)" class="btn btn-secondary" type="button">{{ "GEN.DELETE" | translate }}</button>
-</div>
+<td>
+  <div class="row px-2">
+    <input type="text" id="keyValuePairKey" name="keyValuePairKey" maxLength="100" [placeholder]="'GEN.KEY' | translate"
+      class="form-control border-bottom-i-1" [(ngModel)]="pair.key"
+      [ngClass]="{'is-invalid' : errorFieldId && errorFieldId === pair.key, 'is-valid' : errorFieldId && errorFieldId !== pair.key}">
+  </div>
+</td>
+<td>
+  <div class="row px-2">
+    <input type="text" id="keyValuePairValue" name="keyValuePairValue" maxLength="100"
+      [placeholder]="'GEN.VALUE' | translate" class="form-control border-bottom-i-1" [(ngModel)]="pair.value">
+  </div>
+</td>
+<td>
+  <a (click)="openDeleteDialog()">
+    <div class="text-center">
+      <fa-icon [icon]="faTimesCircle"></fa-icon>
+      <p class="mt-i-0">{{'DATATARGET.DELETE' | translate}}</p>
+    </div>
+  </a>
+</td>
